/*
 * Copyright (c) 2013-2021 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
 * associated documentation files (the "Software"), to deal in the Software without restriction,
 * including without limitation the rights to use, copy, modify, merge, publish, distribute,
 * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all copies or
 * substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
 * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
package eapli.base.persistence.impl.inmemory;

import eapli.base.agvmanagement.repositories.AGVRepository;
import eapli.base.catalogmanagement.repositories.CatalogRepository;
import eapli.base.categorymanagement.repositories.CategoryRepository;
import eapli.base.clientusermanagement.repositories.ClientUserRepository;
import eapli.base.clientusermanagement.repositories.SignupRequestRepository;
import eapli.base.countrymanagement.repository.CountryRepository;
import eapli.base.customermanagement.repositories.CustomerRepository;
import eapli.base.infrastructure.bootstrapers.BaseBootstrapper;
import eapli.base.infrastructure.persistence.RepositoryFactory;
import eapli.base.ordermanagement.repositories.OrderRepository;
import eapli.base.productmanagement.repositories.ProductRepository;
import eapli.base.surveymanagement.repositories.AnswerRepository;
import eapli.base.surveymanagement.repositories.SurveyRepository;
import eapli.base.warehousemanagement.repositories.DockRepository;
import eapli.base.warehousemanagement.repositories.ShelfRepository;
import eapli.framework.domain.repositories.TransactionalContext;
import eapli.framework.infrastructure.authz.domain.repositories.UserRepository;
import eapli.framework.infrastructure.authz.repositories.impl.InMemoryUserRepository;

/**
 * Created by nuno on 20/03/16.
 */
public class InMemoryRepositoryFactory implements RepositoryFactory {

    static {
        // only needed because of the in memory persistence
        new BaseBootstrapper().execute();
    }

    @Override
    public UserRepository users(final TransactionalContext tx) {
        return new InMemoryUserRepository();
    }

    @Override
    public UserRepository users() {
        return users(null);
    }

    @Override
    public ClientUserRepository clientUsers(final TransactionalContext tx) {

        return new InMemoryClientUserRepository();
    }

    @Override
    public ClientUserRepository clientUsers() {
        return clientUsers(null);
    }

    @Override
    public SignupRequestRepository signupRequests() {
        return signupRequests(null);
    }

    @Override
    public CustomerRepository customers(TransactionalContext autoTx) {
        return null;
    }

    @Override
    public CustomerRepository customers() {
        return customers(null);
    }

    @Override
    public CountryRepository countries(TransactionalContext autoTx) {
        return null;
    }

    @Override
    public CountryRepository countries() {
        return countries(null);
    }

    @Override
    public CategoryRepository categories(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public CategoryRepository categories() {
        return categories(null);
    }

    @Override
    public ProductRepository products(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public ProductRepository products() {
        return products(null);
    }

    @Override
    public CatalogRepository catalogs(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public CatalogRepository catalogs() {
        return catalogs(null);
    }

    @Override
    public AGVRepository agvs(TransactionalContext autoTx) {
        return null;
    }

    @Override
    public AGVRepository agvs() {
        return null;
    }

    @Override
    public OrderRepository orders(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public OrderRepository orders() {
        return orders(null);
    }

    @Override
    public DockRepository docks(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public DockRepository docks() {
        return null;
    }

    @Override
    public SurveyRepository surveys(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public SurveyRepository surveys() {
        return null;
    }

    @Override
    public AnswerRepository answers(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public AnswerRepository answers() {
        return null;
    }

    @Override
    public ShelfRepository shelves() {
        return null;
    }

    @Override
    public ShelfRepository shelves(TransactionalContext transactionalContext) {
        return null;
    }

    @Override
    public SignupRequestRepository signupRequests(final TransactionalContext tx) {
        return new InMemorySignupRequestRepository();
    }

    @Override
    public TransactionalContext newTransactionalContext() {
        // in memory does not support transactions...
        return null;
    }

}
